--- a/app/src/main/res/layout/layout_login.xml
+++ b/app/src/main/res/layout/layout_login.xml
@@ -103,22 +103,29 @@
         style="@style/CustomFontStyle"
         android:layout_width="0dp"
         android:layout_height="18sp"
-        android:layout_marginStart="0dp"
+        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_mid"
+        app:layout_constraintStart_toStartOf="@id/btn_login"/>
+    <TextView
+        style="@style/CustomFontStyle"
+        android:layout_width="0dp"
+        android:layout_height="18sp"
         android:text="Remember ID"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@id/btn_login"
-        app:layout_constraintStart_toStartOf="@id/btn_login"
-        app:layout_constraintWidth_percent="0.35" />
-
+        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_mid"
+        app:layout_constraintStart_toEndOf="@id/cb_remember_id"/>
     <CheckBox
         android:id="@+id/cb_auto_login"
+        android:layout_width="0dp"
+        android:layout_height="18sp"
+        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_mid"
+        app:layout_constraintEnd_toStartOf="@id/textview_auto_login"/>
+    <TextView
+        android:id="@+id/textview_auto_login"
         style="@style/CustomFontStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="18sp"
         android:text="Auto login"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@id/btn_login"
-        app:layout_constraintEnd_toEndOf="@id/btn_login" />
+        app:layout_constraintBottom_toTopOf="@id/guide_login_horizontal_mid"
+        app:layout_constraintEnd_toEndOf="@id/btn_login"/>
 
     <ImageView
         android:id="@+id/imageview_login_id_icon"
@@ -159,7 +166,7 @@
         style="@style/CustomFontStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="password"
+        android:hint="PASSWORD"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="@id/imageview_login_pw_icon"
         app:layout_constraintEnd_toStartOf="@id/guide_login_vertical_right"
@@ -175,7 +182,7 @@
         android:text="Log in"
         android:textColor="#fff"
         android:textSize="17sp"
-
+        android:layout_marginTop="15sp"
         app:layout_constraintLeft_toLeftOf="@id/guide_login_vertical_left"
         app:layout_constraintRight_toRightOf="@id/guide_login_vertical_right"
         app:layout_constraintTop_toBottomOf="@id/guide_login_horizontal_mid" />
@@ -200,7 +207,7 @@
         android:layout_width="0dp"
         android:layout_height="33sp"
         android:background="#0d2758"
-        android:text="Forgot your password?"
+        android:text="Forgot your password ?"
         android:textColor="#fff"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="@id/bottom_gradient"
