--- a/app/src/main/res/layout/game_infowindow_bubble.xml
+++ b/app/src/main/res/layout/game_infowindow_bubble.xml
@@ -16,6 +16,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:orientation="horizontal" >
             <TextView android:id="@+id/bubble_title"
                 android:layout_width="wrap_content"
