--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,13 @@
         app:layout_constraintGuide_percent="0.065"
         android:orientation="horizontal"/>
     <TextView
+        android:id="@+id/main_activity_profile_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:layout_marginEnd="20dp"
         android:text="Profile"
+        android:onClick="startOnClick"
         app:layout_constraintBottom_toBottomOf="@id/main_upper_guideline"
         app:layout_constraintRight_toRightOf="parent" />
 
