--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -130,6 +130,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:background="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -153,6 +154,16 @@
                 android:onClick="diary_main_EditStart"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/diary_main_menuTitle" />
+
+            <Button
+                android:id="@+id/diary_main_menuShare"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="공유"
+                android:visibility="invisible"
+                android:onClick="diary_main_SharePicture"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/diary_main_menuTitle"/>
 
             <Button
                 android:id="@+id/diary_main_menuDelete"
