--- a/app/src/main/res/layout/layout_common_topbar.xml
+++ b/app/src/main/res/layout/layout_common_topbar.xml
@@ -32,6 +32,7 @@
         android:layout_marginRight="20dp"
         android:text="Profile"
         android:textSize="20dp"
+        android:onClick="Common_Profile_Click"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
