--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -23,6 +23,41 @@
         app:layout_constraintTop_toTopOf="@id/guide_sign_up_horizontal_boundary" />
 
     <android.support.constraint.Guideline
+        android:id="@+id/sign_up_upper_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintGuide_percent="0.065"
+        android:orientation="horizontal"/>
+
+    <TextView
+        android:id="@+id/sign_up_back_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="Back"
+        android:onClick="OnClickBack"
+        app:layout_constraintBottom_toBottomOf="@id/sign_up_upper_guideline"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/logo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/sign_up_upper_guideline"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#000000"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/sign_up_upper_guideline"/>
+
+    <android.support.constraint.Guideline
         android:id="@+id/guide_sign_up_vertical_left"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -75,7 +110,7 @@
         android:id="@+id/sign_up_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="─Create an account─"
+        android:text="─ Create an account ─"
         android:textAlignment="center"
         android:textSize="14pt"
         app:layout_constraintBottom_toTopOf="@id/guide_sign_up_horizontal_top"
