text size modification dp to sp in all layout

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -18,9 +18,9 @@
         android:id="@+id/progressbar"
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="0dp"
-        android:layout_height="15dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_height="15sp"
+        android:layout_marginStart="20sp"
+        android:layout_marginEnd="20sp"
         app:layout_constraintBottom_toTopOf="@id/map"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -274,6 +274,7 @@
             android:id="@+id/textview_land_country_name_answer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/guide_answer_v"
             app:layout_constraintBottom_toTopOf="@id/textview_land_place_name_answer"
@@ -283,6 +284,7 @@
             android:id="@+id/textview_land_place_name_answer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/guide_answer_v"
             app:layout_constraintTop_toTopOf="@id/guide_answer_h"
@@ -292,6 +294,7 @@
             android:id="@+id/textview_land_distance_answer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/guide_answer_v"
             app:layout_constraintTop_toTopOf="@id/guide_answer_h"
@@ -301,6 +304,7 @@
             android:id="@+id/textview_land_score_answer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/guide_answer_v"
             app:layout_constraintTop_toBottomOf="@id/textview_land_distance_answer"
