--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,8 @@
         android:id="@+id/main_activity_profile_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:layout_marginEnd="20dp"
+        android:textSize="20sp"
+        android:layout_marginEnd="10dp"
         android:text="Profile"
         android:onClick="startOnClick"
         app:layout_constraintBottom_toBottomOf="@id/main_upper_guideline"
@@ -27,6 +27,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/logo"
+        android:padding="5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/main_upper_guideline"
@@ -44,8 +45,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Main Menu"
-        android:textSize="20dp"
-        android:layout_marginBottom="3dp"
+        android:textSize="20sp"
+        android:layout_marginBottom="3sp"
         app:layout_constraintBottom_toTopOf="@id/imageview_game_start"
         app:layout_constraintStart_toStartOf="@id/imageview_game_start" />
 
