--- a/app/src/main/res/layout/activity_diary_edit.xml
+++ b/app/src/main/res/layout/activity_diary_edit.xml
@@ -32,7 +32,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:text="편집"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/diary_edit_btnBack"
@@ -67,7 +67,7 @@
             android:gravity="center_vertical"
             android:layout_marginStart="10dp"
             android:text="제목"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@id/diary_edit_TitleText"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="@id/diary_edit_TitleText" />
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:maxLines="1"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintLeft_toRightOf="@id/diary_edit_titleLabel"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -88,7 +88,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="사진 목록"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:layout_marginVertical="15dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/diary_edit_TitleText" />
@@ -118,7 +118,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="내용"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/diary_edit_DescriptionText"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/diary_edit_divider" />
@@ -127,7 +127,7 @@
             android:id="@+id/diary_edit_DescriptionText"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHeight_percent="0.3"
             app:layout_constraintLeft_toLeftOf="parent" />
