--- a/app/src/main/res/layout/activity_diary_map_n_pictures.xml
+++ b/app/src/main/res/layout/activity_diary_map_n_pictures.xml
@@ -37,7 +37,7 @@
                 android:layout_height="match_parent"
                 android:hint="제목"
                 android:gravity="center_vertical"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:layout_margin="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -86,7 +86,7 @@
             android:hint="내용"
             android:layout_marginVertical="15dp"
             android:padding="10dp"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:background="@drawable/rounded_rectangle"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
