--- a/app/src/main/res/layout/activity_gallery_detail.xml
+++ b/app/src/main/res/layout/activity_gallery_detail.xml
@@ -37,7 +37,7 @@
             android:text="IMAGE_NAME"
             android:gravity="center"
             android:textColor="#FFFFFF"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintLeft_toRightOf="@id/gallerydetail_btn_back"
             app:layout_constraintRight_toLeftOf="@id/gallerydetail_btn_Select"
             app:layout_constraintTop_toTopOf="parent" />
