--- a/app/src/main/res/layout/activity_navigator.xml
+++ b/app/src/main/res/layout/activity_navigator.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout android:id="@+id/MapLayout"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="300sp"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -20,7 +20,7 @@
     </LinearLayout>
     <View android:id="@+id/Divider"
         android:layout_width="match_parent"
-        android:layout_height="10dp"
+        android:layout_height="10sp"
         android:background="@color/colorPrimaryDark"
         app:layout_constraintTop_toBottomOf="@id/MapLayout"
         app:layout_constraintLeft_toLeftOf="parent">
