--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,8 +32,8 @@
         android:id="@+id/profile_back_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:layout_marginEnd="20dp"
+        android:textSize="20sp"
+        android:layout_marginLeft="10dp"
         android:text="Back"
         android:onClick="OnClickBack"
         app:layout_constraintBottom_toBottomOf="@id/profile_upper_guideline"
@@ -43,6 +43,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/logo"
+        android:padding="5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/profile_upper_guideline"
@@ -98,7 +99,7 @@
         android:layout_height="wrap_content"
         android:text="─ Profile ─"
         android:textAlignment="center"
-        android:textSize="40sp"
+        android:textSize="35sp"
         app:layout_constraintBottom_toTopOf="@id/guide_profile_horizontal_top"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
