--- a/app/src/main/res/layout/game_infowindow_bubble.xml
+++ b/app/src/main/res/layout/game_infowindow_bubble.xml
@@ -5,8 +5,8 @@
     android:orientation="horizontal"
     android:background="@drawable/game_custom_infowindow" >
     <ImageView android:id="@+id/bubble_image"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
+        android:layout_width="65sp"
+        android:layout_height="65sp"
         android:visibility="gone" />
     <LinearLayout
         android:layout_width="wrap_content"
@@ -29,13 +29,13 @@
         <TextView android:id="@+id/bubble_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12dp"
+            android:textSize="12sp"
             android:maxEms="17"
             android:text="Description" />
         <TextView android:id="@+id/bubble_subdescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10dp"
+            android:textSize="10sp"
             android:maxEms="17"
             android:text="Address"
             android:visibility="gone" />
