--- a/app/src/main/res/layout/layout_common_topbar.xml
+++ b/app/src/main/res/layout/layout_common_topbar.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:text="Back"
         android:onClick="Common_Back_Click"
-        android:textSize="20dp"
+        android:textSize="20sp"
+        android:layout_marginLeft="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -29,9 +30,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="10sp"
         android:text="Profile"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:onClick="Common_Profile_Click"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
