--- a/app/src/main/res/layout/activity_diary_main.xml
+++ b/app/src/main/res/layout/activity_diary_main.xml
@@ -76,24 +76,47 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintWidth_percent="0.5" />
     </android.support.constraint.ConstraintLayout>
-
-    <kr.ac.kw.coms.globealbum.album.GroupDiaryView
-        android:id="@+id/diary_main_ImageList"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/diary_main_Tab_Left"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_TabBar" />
+        app:layout_constraintTop_toBottomOf="@id/diary_main_TabBar">
+        <kr.ac.kw.coms.globealbum.album.GroupDiaryView
+            android:id="@+id/diary_main_ImageList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+        <kr.ac.kw.coms.globealbum.album.GroupDiaryView
+            android:id="@+id/diary_main_ImageNowLoading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible"/>
+    </android.support.constraint.ConstraintLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/diary_main_JourneyList"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/diary_main_Tab_Right"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/diary_main_TabBar" />
+        app:layout_constraintTop_toBottomOf="@id/diary_main_TabBar">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/diary_main_JourneyList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+        <kr.ac.kw.coms.globealbum.album.GroupDiaryView
+            android:id="@+id/diary_main_JourneyNowLoading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible"/>
+    </android.support.constraint.ConstraintLayout>
+
 
     <ImageButton
         android:id="@+id/diary_main_NewDiary"
