--- a/app/src/main/res/layout/layout_map_n_pictures_verticallist_new.xml
+++ b/app/src/main/res/layout/layout_map_n_pictures_verticallist_new.xml
@@ -7,11 +7,10 @@
     <ImageButton
         android:id="@+id/verticalList_New"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:scaleType="centerCrop"
+        android:layout_height="100dp"
+        android:scaleType="fitCenter"
         android:background="@color/colorPrimary"
         android:src="@drawable/addnew"
-        app:layout_constraintHeight_percent="0.15"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
