--- a/app/src/main/res/layout/layout_zoomin.xml
+++ b/app/src/main/res/layout/layout_zoomin.xml
@@ -25,9 +25,9 @@
             android:id="@+id/diary_ZoomIn_ZoomImage"
             android:layout_width="match_parent"
             android:layout_height="0sp"
-            android:background="#00000000"
+            android:background="#000000"
             android:clickable="true"
-            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintDimensionRatio="2:1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
